# term_games

./: .gitignore  CLAUDE.md  LICENSE  README.md  games.py  pyproject.toml  snake.py  utilities.py
term_games/: __init__.py  __main__.py  main.py  scoreboard.py  ui.py
