[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgames"
version = "0.1.0"
description = "Terminal games you can play from your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["terminal", "games", "curses", "snake", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

[project.scripts]
tgames = "term_games.main:main"

[project.urls]
Homepage = "https://github.com/david/term_games"

[tool.hatch.build.targets.wheel]
packages = ["term_games"]
